Add a working  PoC with an arbitrary navigation algorithm

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -6,5 +6,12 @@
     "default_popup": "popup/popup.html"
   },
   "description": "Let another device control your browser using this Chrome extension",
-  "author": "samvv@pm.me"
+  "author": "samvv@pm.me",
+  "content_scripts": [
+    {
+      "js": ["scripts/content.js"],
+      "matches": [ "<all_urls>" ],
+      "run_at": "document_end"
+    }
+  ]
 }
